--- a/vignettes/NMsim-publications.html
+++ b/vignettes/NMsim-publications.html
@@ -168,9 +168,14 @@ pre code {
 </div>
 
 
+<div id="this-page-is-under-construction" class="section level2">
+<h2>This page is under construction</h2>
+</div>
 <div id="acop-2024" class="section level2">
 <h2>ACOP 2024</h2>
-<p>NMsim - Seamless Nonmem Simulation Platform in R Authors: Philip Delff Supplementary material:</p>
+<p>NMsim - Seamless Nonmem Simulation Platform in R<br />
+Authors: Philip Delff<br />
+Supplementary material: (coming)</p>
 </div>
 
 
