--- a/vignettes/NMsim-publications.html
+++ b/vignettes/NMsim-publications.html
@@ -405,28 +405,28 @@ Authors: <strong>Philip Delff</strong><br />
 The code is in <a href="NMsim-intro.html">NMsim - Seamless NONMEM
 Simulation Platform in R</a><br />
 Received the <strong>ISoP PMx DATA PROGRAMMING SIG AWARD</strong></p>
-<p><a href="../reference/figures/NMsim_automated_workflows_web.pdf">Building
-Automated Pharmacometrics Analysis Workflows in R with NMsim</a> (Poster
-T49)<br />
+<p><a href="../reference/figures/NMsim_automated_workflows_web.pdf"><strong>Building
+Automated Pharmacometrics Analysis Workflows in R with
+NMsim</strong></a> (Poster T49)<br />
 Authors: <strong>Boris Grinshpun, Samer Mouksassi, Philip
 Delff</strong><br />
 Code on forest plots is available <a href="NMsim-forest.html">Simulation-based forest plots with
 NMsim</a>.<br />
 Code to produce VPC plots, see <a href="NMsim-VPC.html">VPC
 simulations</a>.</p>
-<p><a href="../reference/figures/NMsim_param_uncertainty_web.pdf">Simulation
-of clinical trial predictions with model uncertainty using NMsim</a>
-(Poster T110)<br />
+<p><a href="../reference/figures/NMsim_param_uncertainty_web.pdf"><strong>Simulation
+of clinical trial predictions with model uncertainty using
+NMsim</strong></a> (Poster T110)<br />
 Authors: <strong>Sanaya Shroff</strong>, <strong>Philip
 Delff</strong></p>
-<p><a href="../reference/figures/NMsim_modified_models_web.pdf">Simulate
-modified Nonmem models using NMsim</a> (Poster T19)<br />
+<p><a href="../reference/figures/NMsim_modified_models_web.pdf"><strong>Simulate
+modified Nonmem models using NMsim</strong></a> (Poster T19)<br />
 Authors: <strong>Simone Cassani, Jahidur Rashid, Christopher Banker,
 Philip Delff</strong></p>
-<p><a href="../reference/figures/NMsim_simbased_NCA_web.pdf">A
+<p><a href="../reference/figures/NMsim_simbased_NCA_web.pdf"><strong>A
 Model-Based Simulation Workflow Enables Automated and Accurate
-Generation of Clinical Pharmacology Summary Statistics</a> (Poster
-T103)<br />
+Generation of Clinical Pharmacology Summary Statistics</strong></a>
+(Poster T103)<br />
 Authors: <em>Brian M. Reilly Pharm.D., Ph.D., Philip H. Delff,
 Ph.D.</em></p>
 </div>
